# OpenVTO

./: .gitignore  .prettierignore  README.md  THIRD_PARTY_LICENSES.md  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.github/workflows/: ci.yml  publish.yml  python-publish.yml
apps/api/: .env.example  README.md  nixpacks.toml  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  dependencies.py  main.py  utils.py
apps/api/app/models/: __init__.py  responses.py
apps/api/app/routers/: assets.py  generate.py  health.py
apps/api/app/services/: auth.py
apps/playground/: app.json  eas.json  package.json
apps/playground/app/: _layout.tsx  modal.tsx
examples/: .env.example  01_avatar.ipynb  01_avatar.py  02_tryon_static.py  03_videoloop.py  04_full_pipeline.py  05_batch_outfits.py  README.md  basic_workflow.ipynb
fastapi/: .env.example  requirements.txt
fastapi/app/: main.py
fastapi/app/routers/: __init__.py  assets.py  generate.py  health.py
fastapi/app/services/: __init__.py
openvto/: __init__.py  client.py  errors.py  types.py
openvto/example/: __init__.py
openvto/pipelines/: __init__.py  avatar.py  tryon.py  videoloop.py
openvto/prompts/: __init__.py  avatar.json  loader.py  tryon.json
openvto/providers/: __init__.py  base.py  google.py
openvto/storage/: __init__.py  base.py  local.py  memory.py
openvto/utils/: __init__.py  hashing.py
src/openvto/: __init__.py  core.py
tests/: test_core.py  test_example.py  test_pipelines.py  test_prompts.py  test_providers.py  test_storage.py  test_utils.py
(+23 files in other folders)
