[project]
name = "openvto-api"
version = "0.1.0"
description = "OpenVTO Playground API - Virtual Try-On as a Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "hypercorn>=0.14.4",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "openvto>=0.1.2",
]

[project.optional-dependencies]
dev = [
    "uvicorn>=0.23.0",
    "pytest>=7.0",
    "httpx>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

